﻿1.2.3
=====

New Features:

  * Upgrade to Ehcache 2.5.5.

Bugfixes:

  * Error after clicking on the "Links" tab using DB2.  Reported with a fix by
    Dennis N Brown.
  * Error generated by block log after executing "Reload Log Items" on
    Postgres.

Translation Updates:

  * Add Czech translations (vrecion).
  * Updated German translations (axelclk).
  * Updated Russian translations (shar).


1.2.2
=====

New Features:

  * Support comparison operations in the #expr tag ("{{#expr: -1 < 0}}").
  * Upgrade to exp4j 0.3.2.

Bugfixes:

  * Fix potential database connection leak during topic lookup.

Translation Updates:

  * Updated German translations (axelclk).


1.2.1
=====

New Features:

  * None.

Bugfixes:

  * Fix a Javascript error on the search page with IE.  Reported by shar.
  * Problem with history when using DB2 database.  Reported with a fix by
    Dennis N Brown.

Translation Updates:

  * Updated Italian translations (cclavadetscher).


1.2
===

New Features:

  * Upgrade dependencies to Servlet 2.5 and JSP 2.1.  Java 5 has been required
    since JAMWiki 0.8, so this change should be transparent to most users.
  * Add support for limited wiki text in edit summaries (wiki links, interwiki
    links) to match Mediawiki behavior.
  * Add a new JAMWiki:Header system topic that allows adding a custom message
    to the top of all pages, just below the tab bar.
  * Add a new JAMWiki:Custom.css stylesheet.  Starting with JAMWiki 1.2
    System.css will be used for base CSS styles, while Custom.css should be
    used for site-specific customizations.
  * Move the system topics (BottomArea, LeftMenu, StyleSheet) to the
    JAMWiki: namespace (JAMWiki:Footer, JAMWiki:Sidebar, JAMWiki:System.css).
  * Add an option to block malicious IP addresses that are on the Project
    Honeypot blacklist from creating accounts, editing and uploading files.
  * Support storing images directly in the database rather than on the
    filesystem (avhohlov2).