@@ -16,6 +16,7 @@
  */
 package org.jamwiki.model;
 
+import java.io.Serializable;
 import java.sql.Timestamp;
 import java.util.Date;
 import org.apache.commons.lang3.StringUtils;
@@ -23,7 +24,7 @@ import org.apache.commons.lang3.StringUtils;
 /**
  * Provides an object representing a version of a file uploaded to the Wiki.
  */
-public class WikiFileVersion {
+public class WikiFileVersion implements Serializable {
 
 	private Integer authorId;
 	private String authorDisplay;
@@ -34,12 +35,6 @@ public class WikiFileVersion {
 	private String uploadComment;
 	private Timestamp uploadDate = new Timestamp(System.currentTimeMillis());
 	private String url;
-
-	/**
-	 *
-	 */
-	public WikiFileVersion() {
-	}
 
 	/**
 	 *
