@@ -11,6 +11,8 @@ Bugfixes:
     Dennis N Brown.
   * Error generated by block log after executing "Reload Log Items" on
     Postgres.
+  * CloudBees reports NPE due to putting non-serializable attribute in the
+    session.  Reported by Renato Marotta.
 
 Translation Updates:
 
